src/objects/SPE_BUBL__c.object
<CustomObject>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BU BL</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BusinessLine__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>Product__c</columns>
        <columns>ProductCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BBP-{0000}</displayFormat>
        <label>BU BL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BU BL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>